sn0n.github.io isnt blokz/demo
Initially I was thinking about uploading just blokz/demo here, changed my mind and deploying from blokz/gen

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,12 @@
     <span id="side-bar"><!-- phrasing -->
             
 
-                    
+<span class="sideBarTitle">Quick Links:</span>
+
+<!-- ##### EDIT BELOW ##### -->
+    <a href="/projects/index.html">Projects</a>
+    <a href="/contact.html">Contact</a>
+<!-- ##### EDIT ABOVE ##### -->                      
 
             <span class="sideBarTitle">Open Source</span><br />
             <span class="sideBarText">
