--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-<title>sn0n`s blokland</title>
+<title>sn0n`s blokland (old version)</title>
 <meta name="description" content="t(-_-), Words, Pictures, Things &amp; Such ~Fa Q"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
